--- a/events_manager/events/templates/partials/header.html
+++ b/events_manager/events/templates/partials/header.html
@@ -4,17 +4,33 @@
     <meta charset="utf-8">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <title>Wydarzenia</title>
   </head>
   <body>
-    <header>
-      <h1>EventsList</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <li class="nav-item">
+              <a class="navbar-brand" id="main_name" href="/events/">Events Manager</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
       {% if messages %}
-      <ul class="messages">
-          {% for message in messages %}
-          <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-          {% endfor %}
-      </ul>
+        <div class="action-messages">
+          <ul class="messages">
+            <div class="alert alert-success">
+              {% for message in messages %}
+              <li id="alert" {% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+              {% endfor %}
+            </div>
+          </ul>
+        </div>
       {% endif %}
-      <hr>
-    </header>
