--- a/events_manager/events/templates/edit.html
+++ b/events_manager/events/templates/edit.html
@@ -1,15 +1,14 @@
-{% include 'partials/header.html' %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Adding new event</title>
+    <title>Edditing new event</title>
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
   </head>
   <body>
     <div class="row">
       <a href="/events"><i class="fas fa-arrow-circle-left fa-4x"></i></a>
-        <h1 style="text-align: center">Create a new Event</h1>
+        <h1 style="text-align: center">Edit event: {{event.title}}</h1>
         <div style="width: 30%; margin: 25px auto;">
           <form action="{% url 'update' id=event.id  %}" method="post">
             {% csrf_token %}
@@ -31,5 +30,3 @@
       </div>
   </body>
 </html>
-
-{% include 'partials/footer.html' %}
