--- a/events_manager/events/static/css/style.css
+++ b/events_manager/events/static/css/style.css
@@ -181,26 +181,28 @@ th, td {
 }
 
 .column1 {
-  width: 200px;
+  width: 500px;
   padding-left: 50px;
   height: 70px;
 }
 
 .column2 {
-  width: 500px;
-  padding-left: 150px;
+  width: 700px;
+  padding-left: 180px;
 }
 
 .column3 {
-  width: 205px;
+  width: 300px;
+	padding-left: 150px;
 }
 
 .column4 {
-  width: 150px;
+  width: 100px;
 }
 
 .column5 {
   width: 235px;
+	padding-left:50px
 }
 
 .table100 th {
