--- a/events_manager/events/templates/add.html
+++ b/events_manager/events/templates/add.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Adding new event</title>
-    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-  </head>
-  <body>
+{% include 'partials/header.html' %}
     <div class="row">
       <a href="/events"><i class="fas fa-arrow-circle-left fa-4x"></i></a>
         <h1 style="text-align: center">Create a new Event</h1>
@@ -28,5 +21,5 @@
           </form>
         </div>
       </div>
-  </body>
-</html>
+
+{% include 'partials/footer.html' %}
