--- a/events_manager/events/templates/index.html
+++ b/events_manager/events/templates/index.html
@@ -30,7 +30,7 @@
 							</tbody>
 						</table>
 					</div>
-					<div class="wrap-table100-nextcols js-pscroll">
+					<div class="wrap-table100-nextcols">
 						<div class="table100-nextcols">
 							<table>
 								<thead>
