--- a/events_manager/events/static/css/style.css
+++ b/events_manager/events/static/css/style.css
@@ -1,31 +1,47 @@
 html {
 	height: 100%;
 	font-family: sans-serif;
-  background-color: #f8f9fa;
+	background: #fa71cd;
+	background: -webkit-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: -o-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: -moz-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: linear-gradient(bottom, #514A9D, #24C6DC);
 }
 /* Header styling */
 
-#main_name{
-   font-size:4em;
-	 color:white;
-}
-
-.navbar{
-	background-color: #24C6DC;
-}
-
-nav li{
+nav li {
   padding-left: 300px;
 }
 
-#alert{
+.navbar {
+	background-color: #24C6DC;
+}
+
+.row {
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	padding-left: 500px;
+	background: #fa71cd;
+	background: -webkit-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: -o-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: -moz-linear-gradient(bottom, #514A9D, #24C6DC);
+	background: linear-gradient(bottom, #514A9D, #24C6DC);
+}
+
+.action-messages {
+    margin: 10px auto;
+    width: 50%;
+}
+
+#alert {
   list-style-type: none;
   text-align: center
 }
 
-.action-messages{
-    margin: 10px auto;
-    width: 50%;
+#main_name {
+   font-size:4em;
+	 color:white;
 }
 
 /* Index */
@@ -53,6 +69,9 @@ a:hover {
 
 p {margin: 0px;}
 
+h1 {margin: 0px;}
+
+
 ul, li {
 	margin: 0px;
 	list-style-type: none;
@@ -77,12 +96,6 @@ button:hover {
 iframe {
 	border: none !important;
 }
-
-.js-pscroll {
-  position: relative;
-  overflow: hidden;
-}
-
 
 .table100 .ps__rail-x {
   z-index: 1010;
@@ -278,8 +291,7 @@ th, td {
 
 .empty_database {
   text-align: center;
-  background-color:#e6e6e6;
-  font-style: Lato;
+  background-color:red;
 }
 
 .icon_add {
@@ -291,5 +303,5 @@ th, td {
 }
 
 .fas.fa-plus-circle {
-  color: #3399ff;
+  color: #3A6073;
 }
