--- a/events_manager/events/templates/add.html
+++ b/events_manager/events/templates/add.html
@@ -1,8 +1,10 @@
 {% include 'partials/header.html' %}
     <div class="row">
-      <a href="/events"><i class="fas fa-arrow-circle-left fa-4x"></i></a>
-        <h1 style="text-align: center">Create a new Event</h1>
-        <div style="width: 30%; margin: 25px auto;">
+      <div class="arrow">
+        <a href="/events"><i class="fas fa-arrow-circle-left fa-4x"></i></a>
+      </div>
+      <div class="container">
+          <h1>Create a new Event</h1>
           <form action="{% url 'add' %}" method="post">
             {% csrf_token %}
               <label for="title">Title</label><br/>
